# ChangeLog for dev-php/PEAR-HTML_QuickForm_advmultiselect
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-HTML_QuickForm_advmultiselect/ChangeLog,v 1.3 2009/08/22 22:44:56 beandog Exp $

*PEAR-HTML_QuickForm_advmultiselect-1.5.1 (22 Aug 2009)

  22 Aug 2009; Steve Dibb <beandog@gentoo.org>
  +PEAR-HTML_QuickForm_advmultiselect-1.5.1.ebuild:
  Version bump

  21 Apr 2009; Benedikt Böhm <hollow@gentoo.org>
  PEAR-HTML_QuickForm_advmultiselect-1.4.0.ebuild:
  stable on amd64 and x86

*PEAR-HTML_QuickForm_advmultiselect-1.4.0 (06 Dec 2007)

  06 Dec 2007; Markus Ullmann <jokey@gentoo.org> +metadata.xml,
  +PEAR-HTML_QuickForm_advmultiselect-1.4.0.ebuild:
  Initial import from project overlay

  28 Nov 2007; Jakub Moc <jakub@gentoo.org> +metadata.xml,
  +PEAR-HTML_QuickForm_advmultiselect-1.4.0.ebuild:
  New ebuild, Bug 200638
