@@ -1,13 +1,13 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-HTML_QuickForm_advmultiselect/PEAR-HTML_QuickForm_advmultiselect-1.5.1.ebuild,v 1.1 2009/08/22 22:44:56 beandog Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-HTML_QuickForm_advmultiselect/PEAR-HTML_QuickForm_advmultiselect-1.5.1.ebuild,v 1.2 2012/06/19 06:17:47 jdhore Exp $
 
 inherit php-pear-r1
 
 DESCRIPTION="Element for HTML_QuickForm that emulate a multi-select."
 LICENSE="BSD"
 SLOT="0"
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="~amd64 x86"
 IUSE=""
 RDEPEND=">=dev-php/PEAR-HTML_QuickForm-3.2.10
 	>=dev-php/PEAR-HTML_Common-1.2.5"
